--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
-    compile files('C:/Users/Adam/AndroidStudioProjects/TwitterApplication/libs/twitter4j-core-4.0.4.jar')
+    compile 'org.twitter4j:twitter4j-core:4.0.1'
 }
